# nlp

./: .travis.yml  README.md  nlp.cabal  stack.yaml
nif20/: README.md  nif20.cabal
pos-tagging/: .ghci  pos-tagging.cabal
pos-tagging/src/NLP/POS/: Tagging.hs
pos-tagging/src/NLP/POS/Tagging/Corpus/BNC/: Parser.hs
pos-tagging/src/NLP/POS/Tagging/Corpus/Brown/: Parser.hs
question-answering/: README.md  question-answering.cabal
question-answering/src/NLP/QA/Dataset/: QAngaroo.hs
src/Data/: Histogram.hs
src/Numeric/Statistics/: Markov.hs
wordnet30/: README.md  wordnet30.cabal
wordnet30/src/NLP/: WordNet30.hs
wordnet30/src/NLP/WordNet30/: Parsers.hs
wordnet31/: wordnet31.cabal
wordnet31/src/NLP/: WordNet31.hs
wordnet31/src/NLP/WordNet31/: Parsers.hs  Types.hs
