name:                nlp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/nlp
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca.marco gmail
copyright:           2018 Marco Zocca
category:            NLP
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.4.4

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Data.Histogram
                       Data.Text.Distance
                       Numeric.Statistics.Markov
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bytestring
                     , containers
                     , exceptions
                     , hashable
                     , histogram-fill
                     , massiv
                     , mwc-probability
                     , text
                     , text-metrics
                     , unordered-containers
                     , vector

-- executable nlp
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , nlp

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LibSpec
  build-depends:       base
                     , nlp
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/nlp
