name:                nif20
version:             0.1.0.0
synopsis:            NLP Interchange Format v2.0
-- description:
homepage:            https://github.com/ocramz/nlp/nif20
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz fripost org
copyright:           2018 Marco Zocca
category:            NLP
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5

-- executable nif20
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , nif20

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , nif20
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/nlp/nif20
