name:                pos-tagging
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/nlp/pos-tagging
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz fripost org
copyright:           2018 Marco Zocca
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     NLP.POS.Tagging
  other-modules:       NLP.POS.Tagging.Corpus.Brown.Parser
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , text
                     

-- executable pos-tagging
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , pos-tagging

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pos-tagging
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/nlp/pos-tagging
